# fred-interrogator

./: .gitignore  LICENSE  README.md  app.py  main.py  orchestrator.py  process_data.py  pull_fred.py  pyproject.toml  query_agent.py  search_agent.py
tests/: obs._by_real-time_period.csv  obs._by_real-time_period_LNS14000024.csv  seriess.md  seriess_unemployment.md  test_orchestrator.py  test_process_data.py  test_pull_fred.py  test_query_agent.py  test_search_agent.py
